| Summary: | ASTERISK-20088: Duplicate ICE candidates and SDP payload truncation | ||||
| Reporter: | Birger "WIMPy" Harzenetter (wimpy) | Labels: | |||
| Date Opened: | 2012-07-03 08:20:26 | Date Closed: | 2012-07-22 12:03:57 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Channels/chan_sip/General | ||
| Versions: | SVN | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | The box running Asterisk termination several tunnels, all sharing the same local IP. | Attachments: | ( 0) pastebin | ||
| Description: | The SDP payload get too big, not only for its buffer, but also at remote ends. A Huawei switch rejected my INVITES with "513 Message too large" and an Auewrswald PBX just silently ignored them. | ||||
| Comments: | By: Birger "WIMPy" Harzenetter (wimpy) 2012-07-03 08:21:21.782-0500 log containing sip debug By: Joshua C. Colp (jcolp) 2012-07-22 12:03:57.097-0500 Fixed in trunk as of revision 370347. By: Jean-Philippe Lord (jplord) 2012-08-17 14:24:31.380-0500 Using SVN-trunk-r371439M Getting these error when calling Bria on ipad. Bria can make outgoing call but not received any. failed to extend from 1024 to 1324 failed to extend from 1024 to 1304 failed to extend from 1024 to 1297 -- Called SIP/2211 -- Got SIP response 400 "Bad SDP" back from 192.168.10.219:54421 -- SIP/2211-00000002 is circuit-busy == Everyone is busy/congested at this time (1:0/1/0) Asterisk eventually crash and exits. With icesupport=false, no more error. | ||||